[package]
name = "redis_cluster_rs"
version = "0.1.10"
authors = ["Atsushi Koge <atuk721@gmail.com>", "hedgar2017 <hedgar2017@gmail.com>"]
keywords = ["redis", "cluster", "database"]
description = "Redis cluster driver for Rust."
homepage = "https://github.com/atuk721/redis-cluster-rs"
repository = "https://github.com/atuk721/redis-cluster-rs"
license = "MIT"
readme = "README.md"

[dependencies]
crc16 = "0.4"
rand = "0.7"
log = "0.4"
# redis = "0.11"
redis = "0.23.3"
