[package]
name = "redis_cluster_rs2"
version = "0.23.3"
authors = ["keesh.zhang<chunhui2001@gmail.com>"]
keywords = ["redis", "cluster", "database"]
description = "Redis cluster driver for Rust."
homepage = "https://github.com/chunhui2001/redis_cluster_rs"
repository = "https://github.com/chunhui2001/redis_cluster_rs"
license = "MIT"
readme = "README.md"

[dependencies]
crc16 = "0.4"
rand = "0.7"
log = "0.4"
# redis = "0.11"
redis = "0.23.3"
